--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -23,6 +23,7 @@
             android:paddingTop="300dp" tools:paddingTop="200dp"
             android:background="@android:color/transparent"
             android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -30,9 +31,9 @@
         <android.support.v7.widget.CardView
             style="@style/CardStyle">
         <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/movie_title"
                     android:text="@string/movie_title_placeholder"
@@ -126,15 +127,11 @@
             <TextView
                 android:id="@+id/movie_trailers_label"
                 android:text="@string/movie_trailers_label"
-                android:textSize="@dimen/abc_text_size_medium_material"
-                android:textStyle="bold"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                style="@style/LabelStyle"/>
 
             <com.ratanachai.popularmovies.MyGridView
                 android:id="@+id/gridview_trailers"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:stretchMode="columnWidth"
                 android:padding="0dp"
                 android:verticalSpacing="12dp"
@@ -150,7 +147,6 @@
         <android.support.v7.widget.CardView
             android:id="@+id/movie_reviews_card"
             android:visibility="gone" tools:visibility="visible"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
             style="@style/CardStyle">
         <LinearLayout
             android:id="@+id/movie_reviews_container"
@@ -162,11 +158,7 @@
             <TextView
                 android:id="@+id/movie_reviews_label"
                 android:text="@string/movie_reviews_label"
-                android:textSize="@dimen/abc_text_size_medium_material"
-                android:textStyle="bold"
-                android:paddingTop="6dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                style="@style/LabelStyle"/>
         </LinearLayout>
         </android.support.v7.widget.CardView>
 
