--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,8 +21,9 @@
     <style name="ToolBarStyle" parent="Theme.AppCompat">
         <item name="android:textColorSecondary">@android:color/white</item>
     </style>
+
     <!-- CardView -->
-    <style name="CardStyle" parent="AppTheme">
+    <style name="CardStyle">
         <item name="cardElevation">2dp</item>
         <item name="cardCornerRadius">2dp</item>
         <item name="contentPadding">@dimen/activity_horizontal_margin</item>
@@ -34,4 +35,15 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+    <!-- Section Label -->
+    <style name="LabelStyle">
+        <item name="android:textSize">@dimen/abc_text_size_medium_material</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
 </resources>
