Add Separator line between each reviews

--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,25 +1,28 @@
 <LinearLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:paddingLeft="4dp"
+    android:paddingRight="4dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    
     <TextView
         android:id="@+id/movie_review_author"
         tools:text="@string/movie_review_author_placeholder"
         android:textStyle="bold"
-        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
-        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
-        android:importantForAccessibility="no"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/movie_review_content"
         tools:text="@string/movie_review_content_placeholder"
-        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
-        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingTop="4dp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
+    <View
+        android:id="@+id/separator"
+        android:background="@android:color/darker_gray"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 </LinearLayout>
