--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -18,16 +18,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!--To add Top space on top of the surface-->
+        <!-- The whole moving Plane of card (also, to add Top space on top of the surface) -->
         <LinearLayout
-            android:paddingTop="300dp" tools:paddingTop="200dp"
+            android:id="@+id/movie_info_cards"
+            android:paddingTop="400dp" tools:paddingTop="400dp"
             android:background="@android:color/transparent"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <!-- White Surface -->
+        <!-- Card 1: Movie Overview -->
         <android.support.v7.widget.CardView
             style="@style/CardStyle">
         <LinearLayout
@@ -109,10 +110,10 @@
                     android:paddingBottom="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </LinearLayout>
+        </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <!-- Trailer section-->
+        <!-- Card 2: Trailer section-->
         <android.support.v7.widget.CardView
             android:id="@+id/movie_trailers_card"
             android:visibility="gone" tools:visibility="visible"
@@ -143,7 +144,7 @@
         </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <!-- Review section-->
+        <!-- Card 3: Review section-->
         <android.support.v7.widget.CardView
             android:id="@+id/movie_reviews_card"
             android:visibility="gone" tools:visibility="visible"
