--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -7,6 +7,7 @@
 
     <ImageView
         android:id="@+id/grid_item_movie"
+        android:transitionName="poster_zoom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
