Use Poster image from gridView as placeholder image (save as jpg into local file) in detailActivity before replaced with higher quality one when download finish. (poster image swapping is very Smoothest except when picasso fisnishes downloading higher quality image before activity transition animation finish)

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/movie_poster"
         tools:src="@drawable/poster"
-        tools:scaleType="centerCrop"
+        android:scaleType="centerCrop"
         android:transitionName="poster_zoom"
         android:importantForAccessibility="no"
         android:layout_width="match_parent"
