--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
         <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
                 <item name="colorPrimary">@color/blue_800</item>
                 <item name="colorPrimaryDark">@color/blue_900</item>
                 <item name="colorAccent">@color/pink_500</item>
                 <!-- Shared element activity transition for poster_zoom -->
                 <item name="android:windowContentTransitions">true</item>
+                <!--<item name="android:windowAllowEnterTransitionOverlap">true</item>-->
+                <!--<item name="android:windowAllowReturnTransitionOverlap">true</item>-->
         </style>
 </resources>
