1. Fix Peekaboo overview_cards during transition animation 2. Adjust cards location for Landscape and thus download better best quality poster for landscape

--- a/app/src/main/res/anim/move_up.xml
+++ b/app/src/main/res/anim/move_up.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:duration="500"
-        android:fromYDelta="600"
+        android:fromYDelta="@integer/move_up_from"
         android:toYDelta="0"
         />
 </set>
