--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -22,7 +22,7 @@
         <!-- The whole moving Plane of card (also, to add Top space on top of the surface) -->
         <LinearLayout
             android:id="@+id/movie_info_cards"
-            android:paddingTop="400dp" tools:paddingTop="400dp"
+            android:paddingTop="@dimen/cards_distance_from_top"
             android:background="@android:color/transparent"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -31,6 +31,8 @@
 
         <!-- Card 1: Movie Overview -->
         <android.support.v7.widget.CardView
+            android:id="@+id/movie_overview_card"
+            android:visibility="invisible" tools:visibility="visible"
             style="@style/CardStyle">
         <LinearLayout
             android:orientation="vertical"
