--- a/app/src/main/res/values-land/integers.xml
+++ b/app/src/main/res/values-land/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="num_columns">4</integer>
     <integer name="trailer_num_columns">3</integer>
+    <integer name="move_up_from">250</integer>
 </resources>
