--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -10,14 +10,14 @@
         android:id="@+id/movie_review_author"
         tools:text="@string/movie_review_author_placeholder"
         android:textStyle="bold"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/movie_review_content"
         tools:text="@string/movie_review_content_placeholder"
         android:paddingTop="4dp"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <View
