--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,6 +2,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_detail_container"
     tools:context="com.ratanachai.popularmovies.DetailActivity"
+    tools:layout="@layout/fragment_detail"
     android:layout_width="match_parent" android:layout_height="match_parent" />
-
-
