--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,13 @@
     >
     <android.support.v7.widget.Toolbar
         android:id="@+id/tool_bar"
+        android:theme="@style/ToolBarStyle"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         />
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
+        android:theme="@style/AppTabLayout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         />
