--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,19 +7,37 @@
         <item name="colorPrimaryDark">@color/blue_900</item>
         <item name="colorAccent">@color/pink_500</item>
     </style>
-    <style name="DetailActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="ToolBarStyle" parent="Theme.AppCompat">
         <item name="colorPrimary">@color/blue_800</item>
         <item name="colorPrimaryDark">@color/blue_900</item>
         <item name="colorAccent">@color/pink_500</item>
-        <!-- center text vertically with calendar icon for release date; More space between lines in overview/review -->
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
+    <style name="AppTabLayout" parent="Theme.AppCompat">
+        <item name="colorPrimary">@color/blue_800</item>
+        <item name="colorAccent">@color/pink_500</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="tabIndicatorColor">?attr/colorAccent</item>
+        <item name="tabBackground">?attr/selectableItemBackground</item>
+        <item name="tabTextAppearance">@style/AppTabTextAppearance</item>
+        <item name="tabSelectedTextColor">@android:color/white</item>
+    </style>
+    <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="textAllCaps">false</item>
+    </style>
+    <style name="AppTheme.DetailActivityTheme">
+        <!-- center text vertically with calendar icon for release date -->
         <item name="android:gravity">center_vertical</item>
+        <!-- More space between lines in overview/review -->
         <item name="android:lineSpacingExtra">6dp</item>
     </style>
     <!-- ToolBar -->
-    <style name="ToolBarStyle" parent="Theme.AppCompat">
+    <style name="TransparentToolBarStyle" parent="Theme.AppCompat">
         <item name="android:textColorSecondary">@android:color/white</item>
     </style>
-
     <!-- CardView -->
     <style name="CardStyle">
         <item name="cardElevation">2dp</item>
