--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -14,6 +14,8 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         android:theme="@style/AppTabLayout"
+        app:tabBackground="@drawable/tab_color_selector"
+        app:tabIndicatorColor="@color/pink_500"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         />
