--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,25 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     >
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tool_bar"
-        android:theme="@style/ToolBarStyle"
-        android:layout_height="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        />
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        android:theme="@style/AppTabLayout"
-        app:tabBackground="@drawable/tab_color_selector"
-        app:tabIndicatorColor="@color/pink_500"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        />
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tool_bar"
+            android:theme="@style/ToolBarStyle"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:theme="@style/AppTabLayout"
+            app:tabBackground="@drawable/tab_color_selector"
+            app:tabIndicatorColor="@color/pink_500"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            />
+    </android.support.design.widget.AppBarLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
