--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,15 @@
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
@@ -14,6 +19,7 @@
             android:theme="@style/ToolBarStyle"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            app:layout_scrollFlags="scroll|enterAlways"
             />
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -24,11 +30,4 @@
             android:layout_width="match_parent"
             />
     </android.support.design.widget.AppBarLayout>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        />
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
