--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -1,21 +1,22 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context=".MainActivity"
     android:divider="?android:dividerHorizontal"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     >
-    <FrameLayout android:id="@+id/movie_detail_container"
-        tools:layout="@layout/fragment_detail"
-        android:layout_weight="3"
-        android:layout_width="match_parent"
-        android:layout_height="0px" />
     <fragment android:id="@+id/fragment"
         android:name="com.ratanachai.popularmovies.MainActivityFragment"
         tools:layout="@layout/fragment_main"
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0px" />
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+
+    <FrameLayout android:id="@+id/movie_detail_container"
+        tools:layout="@layout/fragment_detail"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
 </LinearLayout>
