--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="colorPrimary">@color/blue_800</item>
         <item name="colorPrimaryDark">@color/blue_900</item>
         <item name="colorAccent">@color/pink_500</item>
+        <!-- DetailFragment: center text vertically with calendar icon for release date -->
+        <item name="android:gravity">center_vertical</item>
+        <!-- DetailFragment: More space between lines in overview/review -->
+        <item name="android:lineSpacingExtra">6dp</item>
     </style>
     <style name="ToolBarStyle" parent="Theme.AppCompat">
         <item name="colorPrimary">@color/blue_800</item>
@@ -21,12 +25,6 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@android:color/darker_gray</item>
         <item name="textAllCaps">false</item>
-    </style>
-    <style name="AppTheme.DetailActivityTheme">
-        <!-- center text vertically with calendar icon for release date -->
-        <item name="android:gravity">center_vertical</item>
-        <!-- More space between lines in overview/review -->
-        <item name="android:lineSpacingExtra">6dp</item>
     </style>
     <!-- ToolBar -->
     <style name="TransparentToolBarStyle" parent="Theme.AppCompat">
