--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -1,5 +1,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     tools:context=".MainActivity"
@@ -7,16 +8,40 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     >
-    <fragment android:id="@+id/fragment"
-        android:name="com.ratanachai.popularmovies.MainActivityFragment"
-        tools:layout="@layout/fragment_main"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent" />
-
+        android:layout_width="0px"
+        android:layout_height="match_parent">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/tool_bar"
+                android:theme="@style/ToolBarStyle"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                app:layout_scrollFlags="scroll|enterAlways"
+                />
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
+                android:theme="@style/AppTabLayout"
+                app:tabBackground="@drawable/tab_color_selector"
+                app:tabIndicatorColor="@color/pink_500"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                />
+        </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.CoordinatorLayout>
     <FrameLayout android:id="@+id/movie_detail_container"
         tools:layout="@layout/fragment_detail"
         android:layout_weight="1"
-        android:layout_width="0dp"
+        android:layout_width="0px"
         android:layout_height="match_parent" />
 </LinearLayout>
