--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -68,8 +68,8 @@
 
                     <TextView
                         android:id="@+id/movie_rating"
-                        android:textSize="@dimen/abc_text_size_small_material"
                         tools:text="8.5"
+                        android:textSize="@dimen/abc_text_size_small_material"
                         android:minHeight="16dp"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/movie_rating_bar"
@@ -80,17 +80,19 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
+                        android:id="@+id/movie_vote_count"
+                        tools:text="(5000 votes)"
                         android:textSize="@dimen/abc_text_size_small_material"
-                        android:text="/10"
                         android:textColor="#CCC"
                         android:minHeight="16dp"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/movie_rating"
                         android:layout_toEndOf="@+id/movie_rating"
+                        android:paddingLeft="4dp"
+                        android:paddingStart="4dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:importantForAccessibility="no"
-                        />
+                        android:importantForAccessibility="no"/>
                 </RelativeLayout>
                 <TextView
                     android:id="@+id/movie_release"
