--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -172,13 +172,14 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/favorite_toggle"
         android:src="@drawable/ic_heart"
+        android:tint="@android:color/white"
         android:layout_gravity="end|bottom"
         app:fabSize="normal"
         app:backgroundTint="@color/pink_500"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"
-        android:layout_margin="32dp"
+        android:layout_margin="@dimen/fab_margin"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         />
