--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="horizontal_margin">16dp</dimen>
     <dimen name="vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">8dp</dimen>
     <dimen name="card_horizontal_margin">16dp</dimen>
     <dimen name="card_bottom_margin">8dp</dimen>
     <dimen name="card_container_bottom_padding">4dp</dimen>
