--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -27,7 +27,7 @@
                 android:theme="@style/ToolBarStyle"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                app:layout_scrollFlags="scroll|enterAlways"
+                app:layout_scrollFlags="scroll"
                 />
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
