--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -10,11 +10,11 @@
     >
     <FrameLayout android:id="@+id/movie_detail_container"
         tools:layout="@layout/fragment_detail"
-        android:layout_weight="3"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0px" />
     <android.support.design.widget.CoordinatorLayout
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0px"
         >
@@ -33,7 +33,7 @@
                 android:theme="@style/ToolBarStyle"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                app:layout_scrollFlags="scroll|enterAlways"
+                app:layout_scrollFlags="scroll"
                 />
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
